# lab06

./: CMakeLists.txt  CPackConfig.cmake  README.md
.github/workflows/: main.yml  release.yml
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/formatter_ex_lib/: Makefile  cmake_install.cmake
cmake-build/formatter_lib/: Makefile  cmake_install.cmake
cmake-build/hello_world_application/: Makefile  cmake_install.cmake  hello_world
cmake-build/solver_application/: Makefile  cmake_install.cmake  solver
cmake-build/solver_lib/: Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  Package.cmake
